--- a/index.html
+++ b/index.html
@@ -53,7 +53,11 @@
     </div>
     <div class="ping"></div>
     <div class="whatsapp-btn">
-      <a href="https://wa.me/918848080346?text=Hello%2C%20I%20have%20a%20question%20About%20Your%20Services" target="_blank"><i class="fa-brands fa-whatsapp"></i></a>
+      <a
+        href="https://wa.me/918848080346?text=Hello%2C%20I%20have%20a%20question%20About%20Your%20Services"
+        target="_blank"
+        ><i class="fa-brands fa-whatsapp"></i
+      ></a>
     </div>
     <div class="content">
       <!-- header section  -->
@@ -154,7 +158,9 @@
                     <a href="./pages/careers.html" id="Careers-link">Careers</a>
                   </li>
                   <li>
-                    <a href="./pages/project.html" id="Careers-link">Projects</a>
+                    <a href="./pages/project.html" id="Careers-link"
+                      >Projects</a
+                    >
                   </li>
 
                   <li>
@@ -309,6 +315,52 @@
                 <img
                   id="moving-home-image"
                   src="./assets/contacts/webdevsvg.svg"
+                  alt=""
+                />
+              </div>
+            </div>
+            <div
+              class="home-row item d-flex justify-content-between align-items-center m-auto"
+            >
+              <div class="home-col text-container">
+                <h1 class="h1-large fade-in">
+                  AI <br class="br-tag" />
+                  Solutions
+                </h1>
+                <h5 class="home-card-title fade-in">
+                  Make Your Move Mark Your Success
+                </h5>
+                <p class="p-large fade-in">
+                  SciPy Technologies is a Thiruvananthapuram based company
+                  offering unique solutions and a variety of services in the
+                  field of Artificial intelligence. Our family is setting the
+                  industry standards, positioning us as category leaders
+                  worldwide. Our team members are technology veterans, committed
+                  to providing smart solutions for any size of project. Contact
+                  us to request a demo or meet a member of our team.
+                </p>
+                <div class="services-div fade-in">
+                  <a
+                    id="service-btn"
+                    role="button"
+                    class="btn btn-primary services-btn btn-effect"
+                  >
+                    <div class="text-wrap">
+                      <span class="text-1"
+                        >Get Services <i class="fa-solid fa-arrow-right"></i
+                      ></span>
+                      <!-- <span class="text-2">Get Services <i class="fa-solid fa-arrow-right"></i></span> -->
+                    </div>
+                  </a>
+                </div>
+              </div>
+              <div
+                class="home-col image-container"
+                style="width: auto; height: 600px; place-items: center"
+              >
+                <img
+                  id="moving-home-image"
+                  src="./assets/contacts/aisol.svg"
                   alt=""
                 />
               </div>
@@ -985,22 +1037,12 @@
           <div class="company-loaction mb-5">
             <div class="iframe-container">
               <iframe
+                frameborder="0"
                 src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3945.9799481199416!2d76.94919077586248!3d8.501327297023833!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3b05bbb4d95185af%3A0x15f1640b53f2c59d!2sSciPy%20Technologies!5e0!3m2!1sen!2sin!4v1696574468092!5m2!1sen!2sin"
                 width="600"
                 height="450"
                 style="border: 0"
-                allowfullscreen=""
-                loading="lazy"
-                referrerpolicy="no-referrer-when-downgrade"
-              ></iframe>
-            </div>
-            <div class="iframe-container">
-              <iframe
-                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3945.9799481199416!2d76.94919077586248!3d8.501327297023833!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3b05bbb4d95185af%3A0x15f1640b53f2c59d!2sSciPy%20Technologies!5e0!3m2!1sen!2sin!4v1696574468092!5m2!1sen!2sin"
-                width="600"
-                height="450"
-                style="border: 0"
-                allowfullscreen=""
+                allowfullscreen
                 loading="lazy"
                 referrerpolicy="no-referrer-when-downgrade"
               ></iframe>
@@ -1205,7 +1247,7 @@
       const ERPCard1 = document.getElementById("erp-service1");
       const appcard = document.getElementById("app-service1");
       const brandcard = document.getElementById("brand-service1");
-      const aicard = document.getElementById("ai-service1")
+      const aicard = document.getElementById("ai-service1");
 
       WebdevCard1.addEventListener("click", () => {
         window.location.href = "./pages/websitedev.html";
@@ -1244,9 +1286,8 @@
       });
 
       aicard.addEventListener("click", () => {
-        window.location.href = "./pages/aisol.html"
-      })
-
+        window.location.href = "./pages/aisol.html";
+      });
     </script>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
